--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     ports:
       - "3333:3333"
     environment:
+      LOG_LEVEL: info
+      APP_KEY: 7Otq2phcA_g__DtX_NQLJZRQN7jxIdFa
       TZ: UTC
       PORT: 3333
       HOST: 0.0.0.0
