--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
     build: .
     ports:
       - "3333:3333"
+    restart: unless-stopped
     environment:
       LOG_LEVEL: info
       APP_KEY: 7Otq2phcA_g__DtX_NQLJZRQN7jxIdFa
