cambios del servidor agregando prefijos api a las rutas

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 services:
+
   adonis-app:
     build: .
     ports:
@@ -15,14 +16,18 @@ services:
       DB_USER: admin
       DB_PASSWORD: admin123
       DB_DATABASE: db_igmar
-      DB_HOST: postgres      # <— nombre del servicio en la red
+      DB_HOST: postgres      
       DB_PORT: 5432
       MONGO_URL: mongodb://admin:admin123@mongo:5000,18.217.230.121:1006/igmar_db?authSource=admin&replicaSet=rs0
     volumes:
       - ./:/app
     networks:
       - igmar-net
+      - frontend-net
 
 networks:
   igmar-net:
+    external: true
+
+  frontend-net:
     external: true
